Fix: Fix input missing label,vulnerable link and bad contrast ratio in another link

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,8 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@500;600;700;800&display=swap');
 
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a { color: hsl(228, 62%, 65%); }
 
 body {
   background: #3b4664;
@@ -31,7 +30,6 @@ body {
   justify-content: space-between;
   margin-bottom: 10px;
     &__heading {
-
     }
 }
 
